# launchkit

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml  railway.json  railway.worker.json  vclaunchkit-report.html  vclaunchkit-report.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_auth_sessions.py  003_billing_and_usage.py  004_share_tokens.py  005_quick_results.py  006_score_snapshots.py  007_admin_role.py
docs/: GTM_SYSTEM_ISSUES_AND_IMPROVEMENTS.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: admin.ts  analyses.ts  auth.ts  billing.ts  client.ts
frontend/src/components/: PublicNav.tsx  SEO.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/layouts/: AppShell.tsx  AuthGuard.tsx
frontend/src/pages/: AdminPage.tsx  BlogPage.tsx  DashboardPage.tsx  ExamplesPage.tsx  LandingPage.tsx  LoginPage.tsx  NewAnalysisPage.tsx  NotFoundPage.tsx  PricingPage.tsx  ProgressPage.tsx  ResultsPage.tsx  SettingsPage.tsx  SharedReportPage.tsx
frontend/src/types/: api.ts
src/gtm/: __init__.py  config.py
src/gtm/agents/: __init__.py  base.py  competitor_analyzer.py  copywriter.py  crawler.py  experimenter.py  market_researcher.py  page_analyzer.py  planner.py  strategist.py  synthesizer.py  workflow.py
src/gtm/api/: app.py  deps.py  filters.py  (+2 more)
tests/: conftest.py
tests/fixtures/: sample_report.json
tests/integration/: test_api.py  test_workflow.py
tests/unit/: test_agents.py  test_html_generator.py  test_json_parser.py  test_schemas.py
(+50 files in other folders)
